force-app/main/default/objects/Product2/fields/ACD_Name__c.field-meta.xml
<CustomField>
    <fullName>ACD_Name__c</fullName>
    <label>ACD Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>