force-app/main/default/objects/Product2/fields/Available_to_Ship_Date__c.field-meta.xml
<CustomField>
    <fullName>Available_to_Ship_Date__c</fullName>
    <label>Available to Ship Date</label>
    <type>Date</type>
</CustomField>