force-app/main/default/objects/Product2/fields/Cost__c.field-meta.xml
<CustomField>
    <fullName>Cost__c</fullName>
    <inlineHelpText>Cost to KQED</inlineHelpText>
    <label>Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>