force-app/main/default/objects/Product2/fields/Estimated_Shipping_Time__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Shipping_Time__c</fullName>
    <label>Estimated Shipping Time</label>
    <length>100</length>
    <type>Text</type>
</CustomField>