force-app/main/default/objects/Product2/fields/Fair_Market_Value__c.field-meta.xml
<CustomField>
    <fullName>Fair_Market_Value__c</fullName>
    <label>Fair Market Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>