force-app/main/default/objects/Product2/fields/Is_Limited__c.field-meta.xml
<CustomField>
    <fullName>Is_Limited__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Indicates product is of limited quantity</inlineHelpText>
    <label>Is Limited</label>
    <type>Checkbox</type>
</CustomField>