force-app/main/default/objects/Product2/fields/Live_On_Web__c.field-meta.xml
<CustomField>
    <fullName>Live_On_Web__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked when a Premium is live in the web store</description>
    <inlineHelpText>If checked, premium is live in the web gateway and can be selected by donors</inlineHelpText>
    <label>Live on Web</label>
    <type>Checkbox</type>
</CustomField>