force-app/main/default/objects/Product2/fields/One_Time_Price__c.field-meta.xml
<CustomField>
    <fullName>One_Time_Price__c</fullName>
    <label>One Time Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>