force-app/main/default/objects/Product2/fields/Shipping_Method__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Method__c</fullName>
    <label>Shipping Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ship from warehouse</fullName>
            </value>
            <value>
                <fullName>Drop ship</fullName>
            </value>
            <value>
                <fullName>In-house distribution</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>