force-app/main/default/objects/Product2/fields/Sub_Type__c.field-meta.xml
<CustomField>
    <fullName>Sub_Type__c</fullName>
    <label>Sub Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DVD</fullName>
            </value>
            <value>
                <fullName>Bluray</fullName>
            </value>
            <value>
                <fullName>Hardcover</fullName>
            </value>
            <value>
                <fullName>Softcover</fullName>
            </value>
            <value>
                <fullName>Digital</fullName>
            </value>
            <value>
                <fullName>CD</fullName>
            </value>
            <value>
                <fullName>Paper</fullName>
            </value>
            <value>
                <fullName>Legal Services</fullName>
            </value>
            <value>
                <fullName>Retirement Planning</fullName>
            </value>
            <value>
                <fullName>Identity Theft Protection</fullName>
            </value>
            <value>
                <fullName>Mug</fullName>
            </value>
            <value>
                <fullName>Backpack</fullName>
            </value>
            <value>
                <fullName>Tote</fullName>
            </value>
            <value>
                <fullName>T-Shirt</fullName>
            </value>
            <value>
                <fullName>Hoodie</fullName>
            </value>
            <value>
                <fullName>Emergency Kit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>