force-app/main/default/objects/Product2/fields/Sustainer_Price__c.field-meta.xml
<CustomField>
    <fullName>Sustainer_Price__c</fullName>
    <label>Sustainer Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>