force-app/main/default/objects/Product2/fields/Tagline__c.field-meta.xml
<CustomField>
    <fullName>Tagline__c</fullName>
    <inlineHelpText>Appears below name of premium in web gateway</inlineHelpText>
    <label>Tagline</label>
    <length>255</length>
    <type>Text</type>
</CustomField>