force-app/main/default/objects/Product2/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Apparel</fullName>
            </value>
            <value>
                <fullName>Audio</fullName>
            </value>
            <value>
                <fullName>Book</fullName>
            </value>
            <value>
                <fullName>Electronics</fullName>
            </value>
            <value>
                <fullName>Perishables</fullName>
            </value>
            <value>
                <fullName>Household</fullName>
            </value>
            <value>
                <fullName>Outdoor</fullName>
            </value>
            <value>
                <fullName>Safety</fullName>
            </value>
            <value>
                <fullName>Video</fullName>
            </value>
            <value>
                <fullName>Magazine</fullName>
            </value>
            <value>
                <fullName>Newspaper</fullName>
            </value>
            <value>
                <fullName>Music Service</fullName>
            </value>
            <value>
                <fullName>Video Service</fullName>
            </value>
            <value>
                <fullName>Professional Services</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>