force-app/main/default/objects/Product2/validationRules/Quantity_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Quantity_Required</fullName>
    <active>false</active>
    <errorConditionFormula>OR( AND( NOT( Is_Limited__c) , NOT( ISNULL(Quantity__c) ) ), AND( Is_Limited__c ,  ISNULL(Quantity__c) ) )</errorConditionFormula>
    <errorMessage>Quantity cannot be null if the product is limited</errorMessage>
</ValidationRule>