force-app/main/default/objects/Product2/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>One_Time_Price__c</columns>
    <columns>Sustainer_Price__c</columns>
    <columns>Type__c</columns>
    <columns>Sub_Type__c</columns>
    <columns>Live_On_Web__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>