force-app/main/default/objects/Product2/listViews/Products_Live_on_Web.listView-meta.xml
<ListView>
    <fullName>Products_Live_on_Web</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>One_Time_Price__c</columns>
    <columns>Sustainer_Price__c</columns>
    <columns>Type__c</columns>
    <columns>Sub_Type__c</columns>
    <columns>Vendor__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Live_On_Web__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Products Live on Web</label>
</ListView>