force-app/main/default/objects/Product2/listViews/Products_Pending_Activation.listView-meta.xml
<ListView>
    <fullName>Products_Pending_Activation</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>ACD_Name__c</columns>
    <columns>One_Time_Price__c</columns>
    <columns>Sustainer_Price__c</columns>
    <columns>Image_URL__c</columns>
    <columns>Vendor__c</columns>
    <columns>Distributor__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Live_On_Web__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Products Pending Activation</label>
</ListView>